force-app/main/default/objects/Solution_Industry__c/Solution_Industry__c.object-meta.xml
<CustomObject>
    <label>Solution Industry</label>
    <nameField>
        <label>Solution Industry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Solution Industries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>