force-app/main/default/objects/Solution_Industry__c/fields/Integration_ID__c.field-meta.xml
<CustomField>
    <fullName>Integration_ID__c</fullName>
    <label>Integration_ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>