force-app/main/default/objects/Solution_Industry__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>Industry Title shown on website</description>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>