force-app/main/default/objects/Solution_Industry__c/fields/Website_Order__c.field-meta.xml
<CustomField>
    <fullName>Website_Order__c</fullName>
    <label>Website Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>